--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "content": "CC­BY­NC­SA 4.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.428.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
+    "mime-types": "^2.1.22",
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
